<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">hangman</string>
    <string name="button_start_game">Start!</string>
    <string name="button_easy_level">Easy</string>
    <string name="button_hard_level">Hard</string>
    <string name="button_expert_level">Expert</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_display_message">DisplayMessageActivity</string>
    <string name="title_activity_level_select">Level Select</string>
    <string name="title_activity_play">PlayActivity</string>
    

    <string name="button_letter_a">A</string>
    <string name="button_letter_b">B</string>
    <string name="button_letter_c">C</string>
    <string name="button_letter_d">D</string>
    <string name="button_letter_e">E</string>
    <string name="button_letter_f">F</string>
    <string name="button_letter_g">G</string>
    <string name="button_letter_h">H</string>
    <string name="button_letter_i">I</string>
    <string name="button_letter_j">J</string>
    <string name="button_letter_k">K</string>
    <string name="button_letter_l">L</string>
    <string name="button_letter_m">M</string>
    <string name="button_letter_n">N</string>
    <string name="button_letter_o">O</string>
    <string name="button_letter_p">P</string>
    <string name="button_letter_q">Q</string>
    <string name="button_letter_r">R</string>
    <string name="button_letter_s">S</string>
    <string name="button_letter_t">T</string>
    <string name="button_letter_u">U</string>
    <string name="button_letter_v">V</string>
    <string name="button_letter_w">W</string>
    <string name="button_letter_x">X</string>
    <string name="button_letter_y">Y</string>
    <string name="button_letter_z">Z</string>
    <string name="button_go_home">go home</string>
    <string name="button_next">next one</string>
</resources>
