<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background= "@drawable/index" >
    <TextView 
        android:layout_weight = "5"
        android:layout_height="0dp"
        android:layout_width="fill_parent"
        android:text="" />

    <Button
        android:layout_weight = "2"
        android:layout_height="0dp"
        android:layout_width="fill_parent"
        android:onClick="easyStart"
        android:text="@string/button_easy_level"
        android:background="@drawable/buttonstartstyle"
        android:textColor = "@drawable/startcolor"
        android:textSize = "40sp"
        android:textStyle = "bold"
         />
    <TextView 
        android:layout_weight = "1"
        android:layout_height="0dp"
        android:layout_width="fill_parent"
        android:text="" />
     <Button
        android:layout_weight = "2"
        android:layout_height="0dp"
        android:layout_width="fill_parent"
        android:onClick="hardStart"
        android:text="@string/button_hard_level"
        android:background="@drawable/buttonstartstyle"
        android:textColor = "@drawable/startcolor"
        android:textSize = "40sp"
        android:textStyle = "bold"
        />
     <TextView 
        android:layout_weight = "1"
        android:layout_height="0dp"
        android:layout_width="fill_parent"
        android:text="" />
      <Button
        android:layout_weight = "2"
        android:layout_height="0dp"
        android:layout_width="fill_parent"
        android:onClick="expertStart"
        android:text="@string/button_expert_level"
        android:background="@drawable/buttonstartstyle"
        android:textColor = "@drawable/startcolor"
        android:textSize = "40sp"
        android:textStyle = "bold"
        />
    
    <TextView 
        android:layout_weight = "3"
        android:layout_height="0dp"
        android:layout_width="fill_parent"
        android:text="" />

</LinearLayout>